:arrow_up: [travis/appveyor] Update compilers
Problem:
- There are new compiler releases avaialble.

Solution:
- Add clang8/clang9/gcc9/xcode11.
- Add MSVC 2019/MSVC 2019 Preview.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,152 +31,167 @@ matrix:
 # Style
 #
   - os: linux
-    dist: trusty
+    dist: xenial
     env: CHECK=ON CLANG_FORMAT=clang-format-4.0 CLANG_TIDY=clang-tidy-4.0
-    addons: { apt: { packages: ["clang-format-4.0", "clang-tidy-4.0"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
+    addons: { apt: { packages: ["clang-format-4.0", "clang-tidy-4.0"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-4.0"] } }
 
 #
 # CMake
 #
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=clang++-3.6
     addons: { apt: { packages: ["clang-3.6", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.6"] } }
-    dist: trusty
+    dist: xenial
 
   - os: linux
     env: BS=cmake CXX=clang++-3.7
     addons: { apt: { packages: ["clang-3.7", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.7"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=clang++-3.8
     addons: { apt: { packages: ["clang-3.8", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-precise-3.8"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake  CXX=clang++-3.9
-    addons: { apt: { packages: ["clang-3.9", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-3.9"] } }
+    addons: { apt: { packages: ["clang-3.9", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-3.9"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=clang++-4.0
-    addons: { apt: { packages: ["clang-4.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
+    addons: { apt: { packages: ["clang-4.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-4.0"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=clang++-5.0
-    addons: { apt: { packages: ["clang-5.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-5.0"] } }
+    addons: { apt: { packages: ["clang-5.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-5.0"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=clang++-6.0
-    addons: { apt: { packages: ["clang-6.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0"] } }
+    addons: { apt: { packages: ["clang-6.0", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-6.0"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=clang++-7
-    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
+    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-7"] } }
 
   - os: linux
-    dist: trusty
-    env: BS=cmake CXX=clang++-7 LIBCXX=ON
-    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
+    dist: xenial
+    env: BS=cmake CXX=clang++-8
+    addons: { apt: { packages: ["clang-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-8"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
+    env: BS=cmake CXX=clang++-9
+    addons: { apt: { packages: ["clang-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-9"] } }
+
+  - os: linux
+    dist: xenial
+    env: BS=cmake CXX=clang++-9 LIBCXX=ON
+    addons: { apt: { packages: ["clang-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-9"] } }
+
+  - os: linux
+    dist: xenial
     env: BS=cmake CXX=g++-5
     addons: { apt: { packages: ["g++-5", "libstdc++-5-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=g++-6
     addons: { apt: { packages: ["g++-6", "libstdc++-6-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=g++-7
     addons: { apt: { packages: ["g++-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: linux
-    dist: trusty
+    dist: xenial
     env: BS=cmake CXX=g++-8
     addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+
+  - os: linux
+    dist: xenial
+    env: BS=cmake CXX=g++-9
+    addons: { apt: { packages: ["g++-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
     osx_image: xcode8.3
     env: BS=cmake CXX=clang++
 
   - os: osx
-    osx_image: xcode9.1
+    osx_image: xcode9.4
     env: BS=cmake CXX=clang++
 
   - os: osx
-    osx_image: xcode10
+    osx_image: xcode10.3
     env: BS=cmake CXX=clang++
 
   - os: osx
-    osx_image: xcode10.1
+    osx_image: xcode11
     env: BS=cmake CXX=clang++
 
 #
 # Bjam
 #
   - os: linux
-    dist: trusty
-    env: BS=bjam TOOLSET=clang CXX=clang++-7
-    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
+    dist: xenial
+    env: BS=bjam TOOLSET=clang CXX=clang++-9
+    addons: { apt: { packages: ["clang-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-9"] } }
 
   - os: linux
-    dist: trusty
-    env: BS=bjam TOOLSET=gcc CXX=g++-8
-    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    dist: xenial
+    env: BS=bjam TOOLSET=gcc CXX=g++-9
+    addons: { apt: { packages: ["g++-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
-    osx_image: xcode10.1
+    osx_image: xcode11
     env: BS=bjam TOOLSET=clang CXX=clang++
 
 #
 # Static analysis
 #
   - os: linux
-    dist: trusty
-    env: BS=cmake VARIANT=analyze CXX=clang++-7 LIBCXX=ON
-    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
+    dist: xenial
+    env: BS=cmake VARIANT=analyze CXX=clang++-9 LIBCXX=ON
+    addons: { apt: { packages: ["clang-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-9"] } }
 
   - os: linux
-    dist: trusty
-    env: BS=cmake VARIANT=analyze CXX=g++-8
-    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    dist: xenial
+    env: BS=cmake VARIANT=analyze CXX=g++-9
+    addons: { apt: { packages: ["g++-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
-    osx_image: xcode10.1
+    osx_image: xcode11
     env: BS=cmake VARIANT=analyze CXX=clang++
 
 #
 # Dynamic analysis
 #
   - os: linux
-    dist: trusty
-    env: BS=cmake MEMCHECK=valgrind CXX=clang++-7 LIBCXX=ON
-    addons: { apt: { packages: ["clang-7", "libstdc++-7-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7"] } }
+    dist: xenial
+    env: BS=cmake MEMCHECK=valgrind CXX=clang++-9 LIBCXX=ON
+    addons: { apt: { packages: ["clang-9", "libstdc++-9-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-xenial-9"] } }
 
   - os: linux
-    dist: trusty
-    env: BS=cmake MEMCHECK=valgrind CXX=g++-8
-    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    dist: xenial
+    env: BS=cmake MEMCHECK=valgrind CXX=g++-9
+    addons: { apt: { packages: ["g++-9", "libstdc++-9-dev", "valgrind", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
   - os: osx
-    osx_image: xcode10.1
+    osx_image: xcode11
     env: BS=cmake MEMCHECK=valgrind CXX=clang++
 
 #
 # Coverage
 #
   - os: linux
-    dist: trusty
-    env: BS=bjam TOOLSET=gcc GCOV=gcov-8 VARIANT=coverage CXX=g++-8
-    addons: { apt: { packages: ["g++-8", "libstdc++-8-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
+    dist: xenial
+    env: BS=bjam TOOLSET=gcc GCOV=gcov-9 VARIANT=coverage CXX=g++-9
+    addons: { apt: { packages: ["g++-9", "libstdc++-9-dev", "gdb"], sources: ["ubuntu-toolchain-r-test"] } }
 
 before_install:
   - git config --global user.name "Continuous Integration"
