--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,10 +36,17 @@ environment:
     MEMCHECK: DRMEMORY
     PLATFORM: amd64
 
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017 Preview
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\Preview\Community\VC\Auxiliary\Build
     BS: cmake
-    CMAKE_GENERATOR: Visual Studio 15 2017
+    CMAKE_GENERATOR: Visual Studio 16 2019
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019 Preview
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\Preview\Community\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 16 2019
     MEMCHECK: DRMEMORY
     PLATFORM: amd64
 
