--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,14 +23,14 @@ environment:
 
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019 Preview
-      VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\
+      VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Preview\VC\Auxiliary\Build
       BS: cmake
       CMAKE_GENERATOR: Visual Studio 16 2019
       MEMCHECK: DRMEMORY
       PLATFORM: amd64
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\
+      VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build
       BS: cmake
       CMAKE_GENERATOR: Visual Studio 16 2019
       MEMCHECK: DRMEMORY
