--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,6 @@ branches:
   - gh-pages
 
 cache:
-  - C:\ProgramData\chocolatey\lib\cmake.portable -> .appveyor.yml
   - C:\tools\mingw64                             -> .appveyor.yml
   - C:\Program Files (x86)\Dr. Memory            -> .appveyor.yml
 
@@ -28,6 +27,7 @@ environment:
     CMAKE_GENERATOR: Visual Studio 14 2015
     MEMCHECK: DRMEMORY
     PLATFORM: amd64
+    CXX_STANDARD: 14
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
@@ -35,6 +35,15 @@ environment:
     CMAKE_GENERATOR: Visual Studio 15 2017
     MEMCHECK: DRMEMORY
     PLATFORM: amd64
+    CXX_STANDARD: 14
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 15 2017
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+    CXX_STANDARD: 17
 
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017 Preview
     VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\Preview\Community\VC\Auxiliary\Build
@@ -42,12 +51,54 @@ environment:
     CMAKE_GENERATOR: Visual Studio 15 2017
     MEMCHECK: DRMEMORY
     PLATFORM: amd64
+    CXX_STANDARD: 14
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017 Preview
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\Preview\Community\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 15 2017
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+    CXX_STANDARD: 17
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 16 2019
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+    CXX_STANDARD: 14
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 16 2019
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+    CXX_STANDARD: 17
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019 Preview
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Preview\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 16 2019
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+    CXX_STANDARD: 14
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019 Preview
+    VSPATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Preview\VC\Auxiliary\Build
+    BS: cmake
+    CMAKE_GENERATOR: Visual Studio 16 2019
+    MEMCHECK: DRMEMORY
+    PLATFORM: amd64
+    CXX_STANDARD: 17
+
 
 matrix:
   fast_finish: true
 
 install:
-  - cinst -y mingw cmake.portable drmemory
+  - cinst -y mingw drmemory
   - refreshenv
   - call "%VSPATH%"\vcvarsall %PLATFORM%
 
