--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,24 +15,28 @@ target_include_directories(
         ${CMAKE_CURRENT_SOURCE_DIR}/extension/include
 )
 
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU OR ${CMAKE_CXX_COMPILER_ID} STREQUAL Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL AppleClang)
-    string(REPLACE "14" "1y" COMPILER_SPECIFIC_CXX_STANDARD ${CXX_STANDARD})
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
+    set(COMPILER_SPECIFIC_CXX_STANDARD "-std=c++${CXX_STANDARD}")
+    string(REPLACE "14" "1y" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
     string(REPLACE "17" "1z" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
     string(REPLACE "20" "2a" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})    
-    set(COMPILER_SPECIFIC_CXX_STANDARD "-std=c++${COMPILER_SPECIFIC_CXX_STANDARD}")
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
-    string(REPLACE "20" "latest" COMPILER_SPECIFIC_CXX_STANDARD ${CXX_STANDARD})
-    set(COMPILER_SPECIFIC_CXX_STANDARD "/std:c++${COMPILER_SPECIFIC_CXX_STANDARD}")
-endif()
 
-message("${COMPILER_SPECIFIC_CXX_STANDARD}")
-
-if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)    
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} -fno-exceptions -pedantic -pedantic-errors -Wall -Wextra -Werror")
+
 elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL AppleClang)
+    set(COMPILER_SPECIFIC_CXX_STANDARD "-std=c++${CXX_STANDARD}")
+    string(REPLACE "14" "1y" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
+    string(REPLACE "17" "1z" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
+    string(REPLACE "20" "2a" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})    
+
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} -fno-exceptions -pedantic -pedantic-errors -Wall -Wextra -Werror")
-elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)    
+    
+elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
+    set(COMPILER_SPECIFIC_CXX_STANDARD "/std:c++${CXX_STANDARD}")
+    string(REPLACE "20" "latest" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
+
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} /W3 /EHsc")
+
 else()
     message(WARNING "Unsupported compiler!")
 endif()
