Keep tests consistent with current version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
     set(COMPILER_SPECIFIC_CXX_STANDARD "/std:c++${CXX_STANDARD}")
     string(REPLACE "20" "latest" COMPILER_SPECIFIC_CXX_STANDARD ${COMPILER_SPECIFIC_CXX_STANDARD})
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} /W3 /EHsc")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_SPECIFIC_CXX_STANDARD} /W3 /EHsc /Zc:__cplusplus")
 
 else()
     message(WARNING "Unsupported compiler!")
