--- a/.mkdocs.yml
+++ b/.mkdocs.yml
@@ -1,8 +1,8 @@
-copyright: Copyright &copy; 2012-2019 Kris Jusiak (kris at jusiak net)
-site_name: "[Boost].DI"
-site_url: http://boost-experimental.github.io/di
+copyright: Copyright &copy; 2012-2020 Kris Jusiak (kris at jusiak net)
+site_name: "[Boost::ext].DI"
+site_url: http://boost-ext.github.io/di
 site_author: Kris Jusiak
-repo_url: https://github.com/boost-experimental/di
+repo_url: https://github.com/boost-ext/di
 repo_name: di
 docs_dir: doc
 theme:
